--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -21,8 +21,7 @@
     0px 3px 1px -2px rgba(207, 207, 207, 0.12);
 }
 
-.button:hover,
-.button:focus {
+.button:hover {
   background-color: #eef389;
   transform: scale(1.1);
   color: #000000;
